# ProgrammersC-

기초문제/Day1/: CMakeLists.txt  Print a and b.cpp  Print a string repeatedly.cpp  Print a string.cpp  Print with case changed.cpp
기초문제/Day10/: CMakeLists.txt  Check if it is a prefix.cpp  Reverse string.cpp  qr code.cpp  vertical reading.cpp
기초문제/Day11/: CMakeLists.txt  Erase text.cpp  Find 1 Nearby.cpp  countdown.cpp  counting characters.cpp
기초문제/Day12/: Area of ​​2.cpp  CMakeLists.txt  Creating an array 3.cpp  Cut the list.cpp  Slice the array.cpp  The first negative number.cpp
기초문제/Day13/: CMakeLists.txt  Change the order.cpp  Elements at n intervals.cpp  From the nth element.cpp  Up to the nth element.cpp  left right.cpp
기초문제/Day14/: 5 people each.cpp  Add until it is greater than n.cpp  CMakeLists.txt  Odd vs Even.cpp  Sequence and Interval Queries 1.cpp
기초문제/Day15/: CMakeLists.txt  Converting a sequence to fit a condition 1.cpp  Converting a sequence to fit a condition 2.cpp  Find the string you want.cpp  Make it 1.cpp  Operations based on length.cpp
기초문제/Day16/: A Emphasize.cpp  CMakeLists.txt  Change specific characters to uppercase.cpp  Change to lowercase.cpp  Change to uppercase.cpp  (+1 more)
기초문제/Day17/: CMakeLists.txt  Count how many times a string appears.cpp  Find the longest substring that ends with a specific string.cpp  Separate by space 1.cpp  Separate by space 2.cpp  remove ad.cpp
기초문제/Day19/: Add as many elements as an array.cpp  Adding and removing from an empty array.cpp  CMakeLists.txt  Creating an Array 6.cpp  Randomly select K numbers.cpp  Three separators.cpp
기초문제/Day20/: CMakeLists.txt  Compare arrays.cpp  Make the length of the array a power of 2.cpp  Perform different operations depending on the length of the array.cpp  String binding.cpp
기초문제/Day3/: CMakeLists.txt  Compare the operation values ​​of two numbers.cpp  Convert a list of characters to a string.cpp  Merge bigger.cpp  Mixing strings.cpp  String multiplication.cpp
기초문제/Day7/: count up.cpp  (+5 more)
기초문제/Day9/: CMakeLists.txt  Check if it is a suffix.cpp  Create a string by concatenating substrings.cpp  Creating an Array 5.cpp  Suffix array.cpp
(+589 files in other folders)
