cmake_minimum_required(VERSION 3.30)
project(Day15)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day15 "Converting a sequence to fit a condition 1.cpp"
        "Converting a sequence to fit a condition 2.cpp"
        "Make it 1.cpp"
        "Operations based on length.cpp"
        "Find the string you want.cpp")
