cmake_minimum_required(VERSION 3.30)
project(Day17)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day17 "Find the longest substring that ends with a specific string.cpp"
        "Count how many times a string appears.cpp"
        "remove ad.cpp"
        "Separate by space 1.cpp"
        "Separate by space 2.cpp")
