cmake_minimum_required(VERSION 3.30)
project(Day19)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day19 "Three separators.cpp"
        "Add as many elements as an array.cpp"
        "Adding and removing from an empty array.cpp"
        "Creating an Array 6.cpp"
        "Randomly select K numbers.cpp")
