cmake_minimum_required(VERSION 3.30)
project(Day20)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day20 "Make the length of the array a power of 2.cpp"
        "Compare arrays.cpp"
        "String binding.cpp"
        "Perform different operations depending on the length of the array.cpp"
        "From the back to the 5th place.cpp")
