cmake_minimum_required(VERSION 3.30)
project(Day3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day3 "Mixing strings.cpp"
        "Convert a list of characters to a string.cpp"
        "String multiplication.cpp"
        "Merge bigger.cpp"
        "Compare the operation values \u200B\u200Bof two numbers.cpp")
