cmake_minimum_required(VERSION 3.30)
project(Day9)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day9 "Creating an Array 5.cpp"
        "Create a string by concatenating substrings.cpp"
        "n characters at the end of a string.cpp"
        "Suffix array.cpp"
        "Check if it is a suffix.cpp")
